[package]
name = "open-accountability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
fern = "0.6.2"
log = "0.4.17"
leptess = "0.14.0"
humantime = "2.1.0"
simplelog = { version = "0.12.1" }
file-rotate = "0.7.3"
screenshots = "0.5.3"
png = "0.17.7"
image = "0.24.6"
rand = "0.8.5"
reqwest = "0.11.16"
tokio = { version = "1.27.0", features = ["full"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
fireauth = "0.1.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = "1.0.159"
serde_json = "1.0.95"
signal-hook = "0.3.15"
ctrlc = "3.2.5"
thiserror = "1.0.40"
mockall_double = "0.3.0"
async-trait = "0.1.68"
mockall = "0.11.4"

[dev-dependencies]
pretty_assertions = "1"


[profile.release]
opt-level = 3
lto = true
